# lekham

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: main.py  ui.py
core/: document_loader.py  embedding.py  text_splitter.py  vector_store.py
scripts/: setup.sh
